[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/ui-components/formation/Formation.gd" type="Script" id=1]
[ext_resource path="res://theme.tres" type="Theme" id=2]
[ext_resource path="res://src/ui-components/formation/player/Player.tscn" type="PackedScene" id=3]

[sub_resource type="Animation" id=3]
resource_name = "Fade1-1-2"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Field/D:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 436, 436 ), Vector2( 436, 600 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Field/WL:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 436, 436 ), Vector2( 436, 405 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Field/WR:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 436, 436 ), Vector2( 636, 200 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Field/P:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 436, 436 ), Vector2( 236, 200 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "Fade1-2-1"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Field/D:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 436, 436 ), Vector2( 436, 600 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Field/WL:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 436, 436 ), Vector2( 236, 400 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Field/WR:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 436, 436 ), Vector2( 636, 400 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Field/P:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 436, 436 ), Vector2( 436, 220 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Fade1-3"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Field/P:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 436, 436 ), Vector2( 436, 190 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Field/WR:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 436, 436 ), Vector2( 636, 200 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Field/WL:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 436, 436 ), Vector2( 236, 200 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Field/D:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 436, 436 ), Vector2( 436, 510 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "Fade2-1-1"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Field/D:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 436, 436 ), Vector2( 236, 560 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Field/WL:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 436, 436 ), Vector2( 436, 360 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Field/WR:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 436, 436 ), Vector2( 636, 560 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Field/P:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 436, 436 ), Vector2( 436, 180 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Fade2-2"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Field/P:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 436, 436 ), Vector2( 236, 200 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Field/WR:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 436, 436 ), Vector2( 636, 200 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Field/WL:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 436, 436 ), Vector2( 236, 550 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Field/D:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 436, 436 ), Vector2( 636, 550 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "Fade3-1"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Field/P:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 436, 436 ), Vector2( 436, 240 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Field/WR:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 436, 436 ), Vector2( 646, 540 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Field/WL:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 436, 436 ), Vector2( 216, 540 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Field/D:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 436, 436 ), Vector2( 436, 590 ) ]
}

[node name="Formation" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FormationSelect" type="OptionButton" parent="."]
margin_left = 160.0
margin_top = 208.0
margin_right = 189.0
margin_bottom = 264.0

[node name="OffensiceTactics" type="OptionButton" parent="."]
margin_left = 160.0
margin_top = 296.0
margin_right = 189.0
margin_bottom = 352.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DefensiveTactics" type="OptionButton" parent="."]
margin_left = 160.0
margin_top = 416.0
margin_right = 189.0
margin_bottom = 472.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Field" type="Control" parent="."]
margin_left = 840.0
margin_top = 48.0
margin_right = 1840.0
margin_bottom = 1048.0

[node name="ColorRect" type="ColorRect" parent="Field"]
margin_right = 1000.0
margin_bottom = 1000.0
color = Color( 0.960784, 0.717647, 0.247059, 1 )

[node name="G" parent="Field" instance=ExtResource( 3 )]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -64.0
margin_top = -200.0
margin_right = 64.0
margin_bottom = -71.9999

[node name="D" parent="Field" instance=ExtResource( 3 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = 90.0
margin_right = 64.0
margin_bottom = 218.0

[node name="WL" parent="Field" instance=ExtResource( 3 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -284.0
margin_top = 40.0
margin_right = -156.0
margin_bottom = 168.0

[node name="WR" parent="Field" instance=ExtResource( 3 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 146.0
margin_top = 40.0
margin_right = 274.0
margin_bottom = 168.0
rect_pivot_offset = Vector2( -1900, 40 )

[node name="P" parent="Field" instance=ExtResource( 3 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -260.0
margin_right = 64.0
margin_bottom = -132.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Fade1-1-2 = SubResource( 3 )
anims/Fade1-2-1 = SubResource( 1 )
anims/Fade1-3 = SubResource( 4 )
anims/Fade2-1-1 = SubResource( 6 )
anims/Fade2-2 = SubResource( 2 )
anims/Fade3-1 = SubResource( 5 )
[connection signal="item_selected" from="FormationSelect" to="." method="_on_FormationSelect_item_selected"]
